--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -1,7 +1,6 @@
 .container-principal {
     width: 100vw; /* Use vw for viewport width to fill the entire viewport */
     height: 100vh; /* Use vh for viewport height */
-    background-color: #141414;
     overflow: hidden; /* Hide any overflowing content */
     font-family: Arial, Helvetica, sans-serif;
     
@@ -10,7 +9,6 @@
   .titulo {
     width: 100%;
     display: flex;
-    background-color: white;
     justify-content: center;
   }
   a{
@@ -36,7 +34,6 @@
     display: flex;
     width: 100%;
     height: calc(100vh - 80px);
-    opacity: 0.7;
   }
   
   button {
@@ -68,7 +65,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: end;
-    background-color: #01122a46;
+    background-color: #01122aa6;
   }
   .subpanel-texto img{
     width: 50%;
@@ -77,7 +74,7 @@
   .subpanel-texto button{
     font-weight: bold;
     margin-bottom: 50px;
-    width: 150px;
+    width: 120px;
     height: 45px;
     border-radius: 50px;
     border: 0px;
@@ -96,5 +93,17 @@
     }
     .subpanel{
         width: 100%;
+    }
+    .subpanel-texto button{
+      font-weight: bold;
+      margin-bottom: 50px;
+      width: 120px;
+      height: 30px;
+      font-size: 10px;
+      border-radius: 50px;
+      border: 0px;
+    }
+    .subpanel-texto img{
+      width: 30%;
     }
 }
