--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -2,9 +2,9 @@
     <main>
         <div class="titulo"><img src="titulo.png" alt=""></div>
         <div class="imagenes">
-            <div class="subpanel" (mouseenter)="startPreview(consultantsVideo)">
+            <div class="subpanel"  (mouseenter)="startPreview(consultantsVideo)">
                 <div class="video-container">
-                    <video #consultantsVideo muted loop>
+                    <video #consultantsVideo muted loop playsinline preload=none>
                         <source src="/videos/industry.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -15,7 +15,7 @@
             </div>
             <div class="subpanel" (mouseenter)="startPreview(expressVideo)">
                 <div class="video-container">
-                    <video #expressVideo muted loop>
+                    <video #expressVideo muted loop playsinline preload=none>
                         <source src="/videos/express.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -26,7 +26,7 @@
             </div>
             <div class="subpanel" (mouseenter)="startPreview(industryVideo)">
                 <div class="video-container">
-                    <video #industryVideo muted loop>
+                    <video #industryVideo muted loop playsinline preload=none>
                         <source src="/videos/consultants.mp4" type="video/mp4">
                     </video>
                 </div>
